@@ -2,7 +2,7 @@
 # Kernel/System/Ticket/Article.pm - global article module for OTRS kernel
 # Copyright (C) 2001-2012 OTRS AG, http://otrs.org/
 # --
-# $Id: Article.pm,v 1.307 2012/01/17 16:04:38 mab Exp $
+# $Id: Article.pm,v 1.308 2012/02/13 11:33:37 mg Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -23,7 +23,7 @@ use Kernel::System::EmailParser;
 use Kernel::System::VariableCheck qw(:all);
 
 use vars qw($VERSION);
-$VERSION = qw($Revision: 1.307 $) [1];
+$VERSION = qw($Revision: 1.308 $) [1];
 
 =head1 NAME
 
@@ -1682,8 +1682,8 @@ sub ArticleGet {
             for my $DynamicFieldConfig ( @{$DynamicFieldArticleList} ) {
 
                 # validate each dynamic field
-                next DYNAMICFILED if !$DynamicFieldConfig;
-                next DYNAMICFILED if !IsHashRefWithData($DynamicFieldConfig);
+                next DYNAMICFIELD if !$DynamicFieldConfig;
+                next DYNAMICFIELD if !IsHashRefWithData($DynamicFieldConfig);
                 next DYNAMICFIELD if !$DynamicFieldConfig->{Name};
                 next DYNAMICFIELD if !IsHashRefWithData( $DynamicFieldConfig->{Config} );
 
@@ -1722,8 +1722,8 @@ sub ArticleGet {
             for my $DynamicFieldConfig ( @{$DynamicFieldTicketList} ) {
 
                 # validate each dynamic field
-                next DYNAMICFILED if !$DynamicFieldConfig;
-                next DYNAMICFILED if !IsHashRefWithData($DynamicFieldConfig);
+                next DYNAMICFIELD if !$DynamicFieldConfig;
+                next DYNAMICFIELD if !IsHashRefWithData($DynamicFieldConfig);
                 next DYNAMICFIELD if !$DynamicFieldConfig->{Name};
                 next DYNAMICFIELD if !IsHashRefWithData( $DynamicFieldConfig->{Config} );
 
@@ -3507,6 +3507,6 @@ did not receive this file, see L<http://www.gnu.org/licenses/agpl.txt>.
 
 =head1 VERSION
 
-$Revision: 1.307 $ $Date: 2012/01/17 16:04:38 $
+$Revision: 1.308 $ $Date: 2012/02/13 11:33:37 $
 
 =cut
